Capabilities Continue